# backend_java/src/main/java/com/cadence/api/security/SecurityConfig.java
@@ -78,7 +78,8 @@ public class SecurityConfig {
 				.authenticationManager(formLoginAuthenticationManager)
 				.authorizeHttpRequests(authorize -> authorize
 						.requestMatchers(
-								"/v1/auth/register", "/v1/auth/login", "/.well-known/jwks.json", "/healthz",
+								"/v1/auth/register", "/v1/auth/login", "/v1/auth/verify-email",
+								"/.well-known/jwks.json", "/healthz",
 								"/login", "/login/**",
 								"/schema/**", "/swagger-ui/**", "/swagger-ui.html")
 						.permitAll()
