# backend_java/src/main/java/com/cadence/api/users/dto/UserResponse.java
@@ -4,6 +4,7 @@ public record UserResponse(
 		String id,
 		String name,
 		String email,
+		boolean emailVerified,
 		Integer age,
 		Double weightKg,
 		Integer ftp,
